# python-project-83

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml
page_analyzer/: app.py  db.py  parser.py  validate.py
page_analyzer/templates/: base.html  index(demo).html  index.html  url.html  urls.html
