[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.3"
gunicorn = "^23.0.0"
psycopg2-binary = "^2.9.10"
validators = "^0.34.0"
requests = "^2.32.3"
bs4 = "^0.0.2"
dotenv = "^0.9.9"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
