[project]
name = "hexlet-code"
version = "0.1.0"
description = "Page analyser for checking websites for SEO suitability"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "ruff>=0.11.0",
    "validators>=0.34.0",
]
